# nyc_cab_experiment_platform

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  all_deps.gv  ci.yaml  ci_architecture.md  design_log.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-airflow.lock.txt  requirements-events.lock.txt  requirements.lock.txt
docs/: conf.py  index.rst
nyc_cab/: __main__.py  _env.py  _validation.py  config.py  constants.py  exceptions.py  spark_config.py
nyc_cab/contracts/: bronze.py  silver.py
nyc_cab/contracts/test/: bronze.py  silver.py
nyc_cab/ingestion/: __init__.py  bronze_entrypoint.py  bronze_io.py  bronze_request.py  source_resolver.py
nyc_cab/ingestion/test/: bronze_entrypoint.py  bronze_io.py  bronze_request.py  source_resolver.py
nyc_cab/orchestration/: spark.py
nyc_cab/orchestration/test/: spark.py
nyc_cab/test/: __init__.py  _env.py  _validation.py  config.py  constants.py  exceptions.py  spark_config.py
nyc_cab/transform/: __init__.py  silver_entrypoint.py  silver_request.py  silver_transforms.py  silver_validators.py
nyc_cab/transform/test/: silver_entrypoint.py  silver_request.py  silver_transforms.py  silver_validators.py
nyc_cab_events/: __init__.py
nyc_cab_events/consumer/: __init__.py  trip_completed.py
nyc_cab_events/contracts/: events.py
nyc_cab_events/producer/: __init__.py  trip_completed.py
nyc_cab_events/sink/: __init__.py  postgres.py
nyc_cab_events/sink/test/: postgres.py
test/: bronze_integration.py  bronze_live.py  conftest.py  events_integration.py  silver_integration.py  silver_live.py
(+3 files in other folders)
